--- a/assets/css/layouts/layout.css
+++ b/assets/css/layouts/layout.css
@@ -8,9 +8,6 @@
 	flex-direction: column;
 	overflow: hidden;
 }
-.page--has-fixed-header .section-main {
-	padding-top: var(--header-height);
-}
 
 .page__header {
 }
@@ -21,6 +18,7 @@
 }
 
 .container {
+	position: relative;
 	max-width: var(--container-width);
 	width: 100%;
 	margin: 0 auto;
